Add Stack for steps and split set and revert
* Add a stack to the board that holds the steps done.
* Split set method in two methods.
  The first method is a wrapper for setting a value with human readable row, column and value. This method returns a created Step that will internaly be used with the second Method.
  The second method is used for setting a value with a step object.
  Hopefully this will make it as easy and fast as possible for both sides.
* Split the revert method.
* Create a util .h file holding help functions and variables.
* A Method reconstructing a 2DArray out of the bitmasks mainly for printing the board.
* A simple print method using the 2DArray method.
* Some refactoring on variable names.
* Comments in .h files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(sudoku)
 
 set(CMAKE_CXX_STANDARD 14)
 
-set(SOURCE_FILES main.cpp gameboard.h gameboard.cpp cmake-build-debug/step.h)
+set(SOURCE_FILES main.cpp gameboard.h gameboard.cpp step.h util.h)
 add_executable(sudoku ${SOURCE_FILES})
