Evaluation of position with most information.
* Set the number at position with the most information.
* 2D Array creation created wrong output. Didn't get why and decided to build it based on the stack. This is more reliable.
* Next TODO is going back if theres no possible solution.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,10 @@
 project(sudokuShared)
 project(sudokuEntry)
-set (SOURCE_FILES move.cpp gameboard.cpp)
-set (ENTRY main.cpp)
+set (SOURCE_FILES move.cpp gameboard.cpp util.cpp)
+set (ENTRY main.cpp util.cpp)
 
 include_directories(../include)
-add_library(sudokuShared ${SOURCE_FILES})
-add_executable(sudokuEntry ${ENTRY})
+add_library(sudokuShared ${SOURCE_FILES} util.cpp)
+add_executable(sudokuEntry ${ENTRY} util.cpp)
 target_link_libraries(sudokuEntry sudokuShared)
 
