--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,7 @@ project(sudokuShared)
 project(sudokuEntry)
 
 set (SOURCE_FILES move.cpp gameboard.cpp ../include/board-initializer.h board-initializer.cpp)
-set (ENTRY main.cpp)
+set (ENTRY main.cpp ../include/solver.h)
 
 include_directories(../include)
 add_library(sudokuShared ${SOURCE_FILES} util.cpp)
