Create Fallback implementation
Create a fallback implementation with backtracking but
without all the fancy bitmagic.

It is just plain simple and does what it should.

KISS KISS

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,8 @@
 project(sudokuShared)
 project(sudokuEntry)
 
-set (SOURCE_FILES move.cpp gameboard.cpp ../include/board-initializer.h board-initializer.cpp tobi-solver.cpp flo-solver.cpp)
-set (ENTRY main.cpp ../include/solver.h ../include/tobi-solver.h ../include/flo-solver.h ../include/kp.h ../include/exception/no-such-move-exception.h)
+set (SOURCE_FILES move.cpp gameboard.cpp ../include/board-initializer.h board-initializer.cpp ../include/solver.h solver.cpp)
+set (ENTRY main.cpp)
 
 include_directories(../include)
 add_library(sudokuShared ${SOURCE_FILES} util.cpp)
