Add a generator and do some refactoring
- Add a generator that is able to create a random seeded
  Sudoku with difficulty as parameter.
- Added a solve method to interface and solver.
- Remove tobi-solver and did proper naming to flo-solver.
- Added some comments on what could be wrong atm.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,11 @@
 project(sudokuShared)
 project(sudokuEntry)
 
-set (SOURCE_FILES move.cpp gameboard.cpp ../include/board-initializer.h board-initializer.cpp tobi-solver.cpp flo-solver.cpp)
-set (ENTRY main.cpp ../include/solver.h ../include/tobi-solver.h ../include/flo-solver.h ../include/kp.h ../include/exception/no-such-move-exception.h)
+set (SOURCE_FILES move.cpp gameboard.cpp ../include/board-initializer.h board-initializer.cpp solver.cpp generator.cpp ../include/generator.h)
+set (ENTRY main.cpp ../include/solvers.h ../include/solver.h ../include/kp.h ../include/exception/no-such-move-exception.h)
 
 include_directories(../include)
-add_library(sudokuShared ${SOURCE_FILES} util.cpp)
-add_executable(sudokuEntry ${ENTRY} util.cpp)
+add_library(sudokuShared ${SOURCE_FILES} util.cpp generator.cpp ../include/generator.h)
+add_executable(sudokuEntry ${ENTRY} util.cpp generator.cpp ../include/generator.h)
 target_link_libraries(sudokuEntry sudokuShared)
 
