--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,11 @@
 project(sudokuShared)
 project(sudokuEntry)
 
-set (SOURCE_FILES move.cpp gameboard.cpp ../include/board-initializer.h board-initializer.cpp ../include/solver.h solver.cpp)
+set (SOURCE_FILES move.cpp gameboard.cpp ../include/board-initializer.h board-initializer.cpp ../include/solver.h solver.cpp generator.cpp ../include/generator.h)
 set (ENTRY main.cpp)
 
 include_directories(../include)
-add_library(sudokuShared ${SOURCE_FILES} util.cpp)
-add_executable(sudokuEntry ${ENTRY} util.cpp)
+add_library(sudokuShared ${SOURCE_FILES} util.cpp generator.cpp ../include/generator.h)
+add_executable(sudokuEntry ${ENTRY} util.cpp generator.cpp ../include/generator.h)
 target_link_libraries(sudokuEntry sudokuShared)
 
