--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,2 @@
 language: cpp
-script: cmake --build cmake-build-debug --target all -- -j 8
+script: mkdir cmake-build && cmake --build cmake-build --target all -- -j 8
