--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,18 @@
   "dist": "precise",
   "compiler": "gcc",
   "addons": {
-    "sources": [
-      "george-edison55-precise-backports",
-      "ubuntu-toolchain-r-test"
-    ],
-    "packages": [
-      "cmake",
-      "cmake-data",
-      "g++-6",
-      "gcc-6"
-    ]
+    "apt": {
+      "sources": [
+        "george-edison55-precise-backports",
+        "ubuntu-toolchain-r-test"
+      ],
+      "packages": [
+        "cmake",
+        "cmake-data",
+        "g++-6",
+        "gcc-6"
+      ]
+    }
   },
   "before_install": [
     "export CXX=\"g++-6\" CC=\"gcc-6\""
