--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@
         "g++-6",
         "gcc-6",
         "doxygen",
-        "doxyden-doc",
+        "doxygen-doc",
         "doxygen-latex",
         "doxygen-gui",
         "graphviz"
